--- a/test.html
+++ b/test.html
@@ -1,86 +1,187 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>景德镇搜索结果</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=375px, initial-scale=1.0">
+    <title>个人中心</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <style>
+        :where([class^="ri-"])::before { content: "\f3c2"; }
+        .order-tab::-webkit-scrollbar { display: none; }
+        .gradient-bg {
+            background: linear-gradient(180deg, #8B5CF6 0%, #7C3AED 100%);
+        }
+    </style>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#7C3AED',
+                        secondary: '#F3F4F6'
+                    },
+                    borderRadius: {
+                        'none': '0px',
+                        'sm': '4px',
+                        DEFAULT: '8px',
+                        'md': '12px',
+                        'lg': '16px',
+                        'xl': '20px',
+                        '2xl': '24px',
+                        '3xl': '32px',
+                        'full': '9999px',
+                        'button': '8px'
+                    }
+                }
+            }
+        }
+    </script>
 </head>
+<body class="w-[375px] min-h-screen bg-gray-50 mx-auto">
+    <div class="gradient-bg fixed top-0 left-0 right-0 h-[240px] rounded-b-[32px] z-0"></div>
+    
+    <header class="fixed top-0 left-0 right-0 px-4 py-3 flex justify-between items-center z-10">
+        <h1 class="text-white text-lg font-medium">个人中心</h1>
+        <div class="flex gap-4">
+            <div class="w-8 h-8 flex items-center justify-center">
+                <i class="ri-notification-3-line text-white text-xl"></i>
+            </div>
+            <div class="w-8 h-8 flex items-center justify-center">
+                <i class="ri-settings-3-line text-white text-xl"></i>
+            </div>
+        </div>
+    </header>
 
-<body>
-    <!-- 顶部搜索栏 -->
-    <div class="search-bar">
-        <input type="text" placeholder="搜索" value="景德镇">
-        <i class="ai-icon">AI正在为你搜索景德镇的信息，包括瓷器、旅游景点、历史文化等</i>
-    </div>
-
-    <!-- 搜索结果展示区域 -->
-    <div class="results-container">
-        <!-- 景德镇概述卡片 -->
-        <div class="result-card">
-            <img src="jingdezhen.jpg" alt="景德镇城市全景图">
-            <p>景德镇，中国著名的瓷都，以其精湛的制瓷工艺闻名于世，拥有悠久的历史和丰富的遗产。</p>
+    <main class="pt-[60px] px-4 pb-[80px] relative z-[1]">
+        <div class="flex items-center gap-4 mb-6">
+            <div class="w-16 h-16 rounded-full overflow-hidden">
+                <img src="https://public.readdy.ai/ai/img_res/aefaabd53dbbd35334f5b16df09d1130.jpg" class="w-full h-full object-cover" alt="avatar">
+            </div>
+            <div class="flex-1">
+                <h2 class="text-white text-lg font-medium mb-1">陈明远</h2>
+                <p class="text-white/80 text-sm">分享生活，记录精彩</p>
+            </div>
         </div>
 
-        <!-- 瓷器相关卡片 -->
-        <div class="result-card">
-            <img src="porcelain.jpg" alt="景德镇瓷器">
-            <h3>景德镇瓷器：传统工艺与现代创新的完美结合，由AI精心挑选</h3>
-            <p>特色：青花瓷、粉彩瓷等。购买渠道：[店铺名称]。</p>
+        <div class="flex justify-between text-center text-white mb-8">
+            <div>
+                <div class="text-lg font-medium">268</div>
+                <div class="text-sm opacity-80">关注</div>
+            </div>
+            <div>
+                <div class="text-lg font-medium">5.8k</div>
+                <div class="text-sm opacity-80">粉丝</div>
+            </div>
+            <div>
+                <div class="text-lg font-medium">12.6k</div>
+                <div class="text-sm opacity-80">获赞</div>
+            </div>
         </div>
 
-        <!-- 旅游景点卡片 -->
-        <div class="result-card">
-            <img src="yaoli.jpg" alt="瑶里古镇">
-            <h3>瑶里古镇：感受景德镇的古朴韵味，AI推荐的必游之地</h3>
-            <p>特色：保存完好的明清古建筑。用户评价：[评分]。</p>
+        <div class="grid grid-cols-3 gap-4 mb-6">
+            <div class="bg-white rounded-lg p-4 text-center cursor-pointer">
+                <div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center">
+                    <i class="ri-heart-line text-primary text-xl"></i>
+                </div>
+                <div class="text-sm">我的收藏</div>
+            </div>
+            <div class="bg-white rounded-lg p-4 text-center cursor-pointer">
+                <div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center">
+                    <i class="ri-time-line text-primary text-xl"></i>
+                </div>
+                <div class="text-sm">浏览历史</div>
+            </div>
+            <div class="bg-white rounded-lg p-4 text-center cursor-pointer">
+                <div class="w-8 h-8 mx-auto mb-2 flex items-center justify-center">
+                    <i class="ri-shopping-bag-line text-primary text-xl"></i>
+                </div>
+                <div class="text-sm">我的订单</div>
+            </div>
         </div>
 
-        <!-- 历史文化卡片 -->
-        <div class="result-card">
-            <h3>景德镇的千年制瓷历史，AI为你梳理重要历史节点</h3>
-            <p>古代官窑到现代瓷都的演变。相关故事：[故事内容]。</p>
+        <div class="bg-white rounded-lg p-4 mb-6">
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-medium">我的订单</h3>
+                <a href="#" class="text-sm text-gray-500">查看全部</a>
+            </div>
+            <div class="order-tab flex gap-6 overflow-x-auto pb-2">
+                <button class="flex flex-col items-center min-w-[60px] cursor-pointer">
+                    <div class="w-8 h-8 flex items-center justify-center mb-1">
+                        <i class="ri-wallet-3-line text-primary text-xl"></i>
+                    </div>
+                    <span class="text-xs">待付款</span>
+                </button>
+                <button class="flex flex-col items-center min-w-[60px] cursor-pointer">
+                    <div class="w-8 h-8 flex items-center justify-center mb-1">
+                        <i class="ri-truck-line text-primary text-xl"></i>
+                    </div>
+                    <span class="text-xs">待发货</span>
+                </button>
+                <button class="flex flex-col items-center min-w-[60px] cursor-pointer">
+                    <div class="w-8 h-8 flex items-center justify-center mb-1">
+                        <i class="ri-box-3-line text-primary text-xl"></i>
+                    </div>
+                    <span class="text-xs">待收货</span>
+                </button>
+                <button class="flex flex-col items-center min-w-[60px] cursor-pointer">
+                    <div class="w-8 h-8 flex items-center justify-center mb-1">
+                        <i class="ri-chat-smile-2-line text-primary text-xl"></i>
+                    </div>
+                    <span class="text-xs">待评价</span>
+                </button>
+                <button class="flex flex-col items-center min-w-[60px] cursor-pointer">
+                    <div class="w-8 h-8 flex items-center justify-center mb-1">
+                        <i class="ri-service-line text-primary text-xl"></i>
+                    </div>
+                    <span class="text-xs">售后</span>
+                </button>
+            </div>
         </div>
-    </div>
 
-    <!-- 智能排序说明 -->
-    <div class="sorting-info">
-        <p>根据景德镇的热门度、用户搜索习惯和相关性，AI为你筛选和排序了以下结果。</p>
-        <div class="score-bar">
-            <div class="score" style="width: 80%;">瓷器卡片</div>
-            <div class="score" style="width: 90%;">旅游景点卡片</div>
-            <div class="score" style="width: 70%;">历史文化卡片</div>
+        <div class="bg-white rounded-lg p-4">
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-medium">每日发现</h3>
+                <a href="#" class="text-sm text-gray-500">更多</a>
+            </div>
+            <div class="grid grid-cols-2 gap-4">
+                <div class="rounded-lg overflow-hidden cursor-pointer">
+                    <img src="https://public.readdy.ai/ai/img_res/a018997dcc513ab1301828f09dec9098.jpg" class="w-full h-32 object-cover" alt="discover">
+                    <div class="mt-2">
+                        <p class="text-sm line-clamp-2">现代建筑之美</p>
+                    </div>
+                </div>
+                <div class="rounded-lg overflow-hidden cursor-pointer">
+                    <img src="https://public.readdy.ai/ai/img_res/63a4c4eaa2a271fc4be5ce46ff5adef9.jpg" class="w-full h-32 object-cover" alt="discover">
+                    <div class="mt-2">
+                        <p class="text-sm line-clamp-2">精致美食探索</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
 
-    <!-- 相关推荐 -->
-    <div class="recommendations">
-        <h3>AI智能推荐</h3>
-        <p>陶瓷展览：[展览名称]，时间：[展览时间]。</p>
-        <p>民俗节庆：[节庆名称]，时间：[节庆时间]。</p>
-    </div>
-
-    <!-- 筛选功能 -->
-    <div class="filters">
-        <h3>筛选条件</h3>
-        <label>
-            <input type="checkbox">瓷器类别（如青花瓷、粉彩瓷等）
-        </label>
-        <label>
-            <input type="checkbox">景点类型（历史景点、自然风光）
-        </label>
-        <label>
-            <input type="checkbox">文化元素（制瓷工艺、民间传说）
-        </label>
-    </div>
-
-    <!-- 用户反馈 -->
-    <div class="feedback">
-        <h3>用户反馈</h3>
-        <textarea placeholder="请输入你的反馈"></textarea>
-        <button>提交反馈</button>
-    </div>
+    <nav class="fixed bottom-0 left-0 right-0 bg-white border-t flex justify-between items-center px-6 py-2 z-10">
+        <a href="#" class="flex flex-col items-center">
+            <div class="w-6 h-6 flex items-center justify-center">
+                <i class="ri-compass-3-line text-gray-400"></i>
+            </div>
+            <span class="text-xs mt-1 text-gray-400">发现</span>
+        </a>
+        <div class="relative -mt-6">
+            <button class="w-14 h-14 rounded-full bg-primary flex items-center justify-center shadow-lg">
+                <i class="ri-add-line text-white text-2xl"></i>
+            </button>
+        </div>
+        <a href="#" class="flex flex-col items-center">
+            <div class="w-6 h-6 flex items-center justify-center">
+                <i class="ri-calendar-line text-gray-400"></i>
+            </div>
+            <span class="text-xs mt-1 text-gray-400">日历</span>
+        </a>
+    </nav>
 </body>
-
 </html>
