--- a/test.html
+++ b/test.html
@@ -1,291 +1,140 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=375px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>个人中心</title>
-<script src="https://cdn.tailwindcss.com/3.4.16"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet">
-<script>
-tailwind.config = {
-theme: {
-extend: {
-colors: {
-primary: '#7160FF',
-secondary: '#FF9F2E'
-},
-borderRadius: {
-'none': '0px',
-'sm': '4px',
-DEFAULT: '8px',
-'md': '12px',
-'lg': '16px',
-'xl': '20px',
-'2xl': '24px',
-'3xl': '32px',
-'full': '9999px',
-'button': '8px'
-}
-}
-}
-}
-</script>
-<style>
-:where([class^="ri-"])::before { content: "\f3c2"; }
-body { background-color: #F8F8F8; }
-.order-status-tab.active {
-color: #7160FF;
-border-bottom: 2px solid #7160FF;
-}
-.tab-bar-item.active {
-color: #7160FF;
-}
-.tab-bar-item.active i {
-color: #7160FF;
-}
-.product-item {
-cursor: pointer;
-}
-.service-item, .order-item {
-transition: all 0.2s;
-}
-.service-item:active, .order-item:active {
-transform: scale(0.95);
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=375px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>全部订单</title>
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#6366f1',
+                        secondary: '#f43f5e'
+                    },
+                    borderRadius: {
+                        'none': '0px',
+                        'sm': '4px',
+                        DEFAULT: '8px',
+                        'md': '12px',
+                        'lg': '16px',
+                        'xl': '20px',
+                        '2xl': '24px',
+                        '3xl': '32px',
+                        'full': '9999px',
+                        'button': '8px'
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        :where([class^="ri-"])::before { content: "\f3c2"; }
+        .tab-active { color: #6366f1; border-bottom: 2px solid #6366f1; }
+        .order-status { transition: all 0.3s; }
+        .countdown { animation: pulse 1s infinite; }
+        @keyframes pulse {
+            0% { opacity: 1; }
+            50% { opacity: 0.5; }
+            100% { opacity: 1; }
+        }
+    </style>
 </head>
-<body class="w-[375px] min-h-screen mx-auto pb-[60px]">
-<nav class="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
-<div class="w-[375px] mx-auto flex items-center justify-between px-4 h-[48px]">
-<h1 class="text-lg font-medium">个人中心</h1>
-<div class="w-8 h-8 flex items-center justify-center">
-<i class="ri-search-line text-xl"></i>
-</div>
-</div>
-</nav>
-<main class="mt-[56px] px-4 space-y-4">
-  <!-- 用户信息卡片 -->
-  <div class="bg-primary rounded-lg p-4 text-white">
-    <div class="flex items-center space-x-4">
-      <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-white">
-        <img src="https://public.readdy.ai/ai/img_res/7b50db19b2e90195755169d36aa07020.jpg" class="w-full h-full object-cover" alt="用户头像">
-      </div>
-      <div class="flex-1">
-        <div class="text-lg font-medium">陈雅婷</div>
-        <div class="text-sm opacity-90">会员等级：黄金会员</div>
-      </div>
-      <div class="w-8 h-8 flex items-center justify-center">
-        <i class="ri-settings-3-line text-xl"></i>
-      </div>
-    </div>
-    <div class="grid grid-cols-3 mt-4 text-center">
-      <div class="space-y-1">
-        <div class="text-lg font-medium">1280</div>
-        <div class="text-xs opacity-90">我的积分</div>
-      </div>
-      <div class="space-y-1">
-        <div class="text-lg font-medium">8</div>
-        <div class="text-xs opacity-90">优惠券</div>
-      </div>
-      <div class="space-y-1">
-        <div class="text-lg font-medium">¥50</div>
-        <div class="text-xs opacity-90">账户余额</div>
-      </div>
-    </div>
-  </div>
-  
-  <!-- 订单管理 -->
-  <div class="bg-white rounded-lg p-4">
-    <div class="flex items-center justify-between mb-3">
-      <div class="text-base font-medium">我的订单</div>
-      <div class="text-xs text-gray-500 flex items-center">
-        查看全部订单 <i class="ri-arrow-right-s-line ml-1"></i>
-      </div>
-    </div>
-    <div class="grid grid-cols-5 text-center">
-      <div class="order-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-10 h-10 flex items-center justify-center relative">
-          <i class="ri-wallet-3-line text-xl text-gray-700"></i>
-          <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs w-4 h-4 rounded-full flex items-center justify-center">2</span>
+<body class="bg-gray-50">
+    <nav class="fixed top-0 left-0 right-0 bg-white z-50 border-b border-gray-100">
+        <div class="h-11 flex items-center px-4">
+            <button onclick="history.back()" class="w-8 h-8 flex items-center justify-center">
+                <i class="ri-arrow-left-s-line text-xl"></i>
+            </button>
+            <span class="text-base font-medium">全部订单</span>
         </div>
-        <span class="text-xs">待付款</span>
-      </div>
-      <div class="order-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-10 h-10 flex items-center justify-center">
-          <i class="ri-truck-line text-xl text-gray-700"></i>
+        <div class="flex px-4 overflow-x-auto whitespace-nowrap">
+            <button class="tab-active order-status py-3 px-4 text-sm">全部</button>
+            <button class="order-status py-3 px-4 text-sm text-gray-500">待付款</button>
+            <button class="order-status py-3 px-4 text-sm text-gray-500">待发货</button>
+            <button class="order-status py-3 px-4 text-sm text-gray-500">待收货</button>
+            <button class="order-status py-3 px-4 text-sm text-gray-500">已完成</button>
         </div>
-        <span class="text-xs">待发货</span>
-      </div>
-      <div class="order-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-10 h-10 flex items-center justify-center relative">
-          <i class="ri-inbox-archive-line text-xl text-gray-700"></i>
-          <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs w-4 h-4 rounded-full flex items-center justify-center">1</span>
+    </nav>
+
+    <main class="mt-24 mb-16 px-4">
+        <div class="bg-white rounded-lg mb-4 overflow-hidden">
+            <div class="p-4">
+                <div class="flex items-center justify-between mb-3">
+                    <div class="flex items-center">
+                        <i class="ri-store-2-line mr-2"></i>
+                        <span class="text-sm">墨香阁文房四宝</span>
+                    </div>
+                    <span class="text-primary text-sm">待付款</span>
+                </div>
+                <div class="flex items-center gap-3 pb-3 border-b border-gray-100">
+                    <img src="https://public.readdy.ai/ai/img_res/0ff91373833987d71ea0754f23227a8f.jpg" class="w-20 h-20 object-cover rounded" alt="毛笔套装">
+                    <div class="flex-1">
+                        <h3 class="text-sm mb-1">精品红木毛笔套装 初学者入门书法工具</h3>
+                        <p class="text-xs text-gray-500 mb-1">高档礼盒装 | 狼毫/红木</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-secondary">¥299.00</span>
+                            <span class="text-xs text-gray-500">x1</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex items-center justify-between mt-3">
+                    <div class="text-xs text-secondary">
+                        <i class="ri-time-line"></i>
+                        <span>支付剩余时间：23:45:12</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <button class="text-sm px-4 py-1.5 border border-gray-200 rounded-button">收藏</button>
+                        <button class="text-sm px-4 py-1.5 border border-gray-200 rounded-button">删除</button>
+                    </div>
+                </div>
+            </div>
+            <div class="flex border-t border-gray-100">
+                <button class="flex-1 py-3 text-sm text-gray-500 border-r border-gray-100">再次购买</button>
+                <button class="flex-1 py-3 text-sm text-primary">立即付款</button>
+            </div>
         </div>
-        <span class="text-xs">待收货</span>
-      </div>
-      <div class="order-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-10 h-10 flex items-center justify-center">
-          <i class="ri-chat-1-line text-xl text-gray-700"></i>
+
+        <div class="bg-white rounded-lg mb-4 overflow-hidden">
+            <div class="p-4">
+                <div class="flex items-center justify-between mb-3">
+                    <div class="flex items-center">
+                        <i class="ri-store-2-line mr-2"></i>
+                        <span class="text-sm">景德镇陶瓷旗舰店</span>
+                    </div>
+                    <span class="text-gray-500 text-sm">待发货</span>
+                </div>
+                <div class="flex items-center gap-3 pb-3 border-b border-gray-100">
+                    <img src="https://public.readdy.ai/ai/img_res/410af8ddd468e3370a3309b0b273b1b3.jpg" class="w-20 h-20 object-cover rounded" alt="茶具套装">
+                    <div class="flex-1">
+                        <h3 class="text-sm mb-1">景德镇手绘青花瓷茶具套装 家用功夫茶杯</h3>
+                        <p class="text-xs text-gray-500 mb-1">一壶六杯 | 青花瓷/手绘</p>
+                        <div class="flex items-center justify-between">
+                            <span class="text-sm text-secondary">¥399.00</span>
+                            <span class="text-xs text-gray-500">x1</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex items-center justify-end mt-3 gap-2">
+                    <button class="text-sm px-4 py-1.5 border border-gray-200 rounded-button">收藏</button>
+                    <button class="text-sm px-4 py-1.5 border border-gray-200 rounded-button">删除</button>
+                </div>
+            </div>
         </div>
-        <span class="text-xs">待评价</span>
-      </div>
-      <div class="order-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-10 h-10 flex items-center justify-center">
-          <i class="ri-customer-service-2-line text-xl text-gray-700"></i>
-        </div>
-        <span class="text-xs">售后</span>
-      </div>
-    </div>
-  </div>
-  
-  <!-- 我的服务 -->
-  <div class="bg-white rounded-lg p-4">
-    <div class="text-base font-medium mb-3">我的服务</div>
-    <div class="grid grid-cols-4 gap-y-4">
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/cd9080a28513d62910830645c40aab58.jpg" class="w-full h-full object-cover" alt="地址管理">
-        </div>
-        <span class="text-xs">地址管理</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/dbc44988f5c99f32a1c1ee7412fbba35.jpg" class="w-full h-full object-cover" alt="我的收藏">
-        </div>
-        <span class="text-xs">我的收藏</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/9eff0e45f6ff14d4aaa12b3be82f20fd.jpg" class="w-full h-full object-cover" alt="优惠券">
-        </div>
-        <span class="text-xs">优惠券</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/0a123b33fc2c67bb522bcbafe353e1ea.jpg" class="w-full h-full object-cover" alt="购物车">
-        </div>
-        <span class="text-xs">购物车</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/53037345ad836010cf384a85fadbac6a.jpg" class="w-full h-full object-cover" alt="积分商城">
-        </div>
-        <span class="text-xs">积分商城</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/90073da34afb4471265da18a254c47ec.jpg" class="w-full h-full object-cover" alt="我的钱包">
-        </div>
-        <span class="text-xs">我的钱包</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/7a113086b48c5e0133282226db445fd4.jpg" class="w-full h-full object-cover" alt="联系客服">
-        </div>
-        <span class="text-xs">联系客服</span>
-      </div>
-      <div class="service-item flex flex-col items-center space-y-1 cursor-pointer">
-        <div class="w-12 h-12 flex items-center justify-center">
-          <img src="https://public.readdy.ai/ai/img_res/d7fc2f18b0e07eaad3561dbbe1244a7c.jpg" class="w-full h-full object-cover" alt="意见反馈">
-        </div>
-        <span class="text-xs">意见反馈</span>
-      </div>
-    </div>
-  </div>
-  
-  <!-- 最近浏览 -->
-  <div class="bg-white rounded-lg p-4">
-    <div class="flex items-center justify-between mb-3">
-      <div class="text-base font-medium">最近浏览</div>
-      <div class="text-xs text-gray-500 flex items-center">
-        查看更多 <i class="ri-arrow-right-s-line ml-1"></i>
-      </div>
-    </div>
-    <div class="grid grid-cols-3 gap-3">
-      <div class="product-item space-y-1">
-        <div class="aspect-square rounded overflow-hidden">
-          <img src="https://public.readdy.ai/ai/img_res/f405f8c4224c6d59389a4262f9f527d3.jpg" class="w-full h-full object-cover" alt="毛笔套装">
-        </div>
-        <div class="text-xs line-clamp-2">精品红木毛笔套装 初学者入门书法工具</div>
-        <div class="text-xs text-primary">¥ 299.00</div>
-      </div>
-      <div class="product-item space-y-1">
-        <div class="aspect-square rounded overflow-hidden">
-          <img src="https://public.readdy.ai/ai/img_res/68a0db3c83781be759e4b8979f4e38c2.jpg" class="w-full h-full object-cover" alt="茶具套装">
-        </div>
-        <div class="text-xs line-clamp-2">景德镇手绘青花瓷茶具套装 家用功夫茶杯</div>
-        <div class="text-xs text-primary">¥ 368.00</div>
-      </div>
-      <div class="product-item space-y-1">
-        <div class="aspect-square rounded overflow-hidden">
-          <img src="https://public.readdy.ai/ai/img_res/774fa972c97f4339bccb95a25f9c566b.jpg" class="w-full h-full object-cover" alt="丝巾">
-        </div>
-        <div class="text-xs line-clamp-2">苏州丝绸真丝围巾 女士春秋季百搭长款丝巾</div>
-        <div class="text-xs text-primary">¥ 199.00</div>
-      </div>
-    </div>
-  </div>
-</main>
-<div class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-100">
-<div class="w-[375px] mx-auto grid grid-cols-4 h-[60px]">
-<div class="tab-bar-item flex flex-col items-center justify-center space-y-1">
-<div class="w-6 h-6 flex items-center justify-center">
-<i class="ri-home-5-line text-xl"></i>
-</div>
-<span class="text-xs">首页</span>
-</div>
-<div class="tab-bar-item flex flex-col items-center justify-center space-y-1">
-<div class="w-6 h-6 flex items-center justify-center">
-<i class="ri-compass-3-line text-xl"></i>
-</div>
-<span class="text-xs">发现</span>
-</div>
-<div class="tab-bar-item flex flex-col items-center justify-center space-y-1">
-<div class="w-6 h-6 flex items-center justify-center">
-<i class="ri-shopping-cart-line text-xl"></i>
-</div>
-<span class="text-xs">购物车</span>
-</div>
-<div class="tab-bar-item active flex flex-col items-center justify-center space-y-1">
-<div class="w-6 h-6 flex items-center justify-center">
-<i class="ri-user-3-line text-xl"></i>
-</div>
-<span class="text-xs">我的</span>
-</div>
-</div>
-</div>
-<script>
-// 底部导航切换
-document.querySelectorAll('.tab-bar-item').forEach(tab => {
-  tab.addEventListener('click', () => {
-    document.querySelector('.tab-bar-item.active').classList.remove('active');
-    tab.classList.add('active');
-  });
-});
-// 订单管理点击事件
-document.querySelectorAll('.order-item').forEach(item => {
-  item.addEventListener('click', () => {
-    // 这里可以添加跳转到订单页面的逻辑
-    console.log('跳转到订单页面');
-  });
-});
-// 服务项点击事件
-document.querySelectorAll('.service-item').forEach(item => {
-  item.addEventListener('click', () => {
-    // 这里可以添加跳转到相应服务页面的逻辑
-    console.log('跳转到服务页面');
-  });
-});
-// 最近浏览商品点击事件
-document.querySelectorAll('.product-item').forEach(item => {
-  item.addEventListener('click', () => {
-    // 这里可以添加跳转到商品详情页的逻辑
-    console.log('跳转到商品详情页');
-  });
-});
-</script>
+    </main>
+
+    <script>
+        document.querySelectorAll('.order-status').forEach(tab => {
+            tab.addEventListener('click', () => {
+                document.querySelector('.tab-active').classList.remove('tab-active');
+                tab.classList.add('tab-active');
+            });
+        });
+    </script>
 </body>
 </html>
