--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <!-- 设置视口宽度为设备宽度，初始缩放比例为1.0，适配视口 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Daily Discover</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
 </head>
 <body>
