--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <title>Daily Discover</title>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
+  <!-- 预加载占位图片脚本 -->
+  <script src="%PUBLIC_URL%/images/placeholder.js"></script>
 </head>
 <body>
   <div id="root"></div>
