--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
 <!-- 设置视口宽度为设备宽度，初始缩放比例为1.0，适配视口 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Daily Discover</title>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <title>每日发现</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
   <!-- 预加载占位图片脚本 -->
   <script src="%PUBLIC_URL%/images/placeholder.js"></script>
