feat(auth): 实现登录和注册页面的选项卡功能
- 在登录和注册页面添加了选项卡组件，分别用于密码登录/手机登录和邮箱注册/手机注册
- 优化了表单样式，包括颜色、字体大小和输入框样式
- 调整了页面布局，使主色延伸至状态栏并适配刘海屏
- 移除了登录和注册表单中的冗余元素，简化了界面结构

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <!-- 设置视口宽度为设备宽度，初始缩放比例为1.0，适配视口 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#5B47E8">
   <title>每日发现</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
